feat(project): implemented UpdateProject route
